fix: image path in og:image and meta refinements

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/rocket.ico" />
-    <title>Julia Ernst</title>
+    <title>Julia Ernst – Geospatial Software Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Geospatial Software Developer - Julia Ernst"
+      content="Julia Ernst - Geospatial Software Developer. Discover my new webpage, implemented with React, TypeScript and Github Actions."
       data-rh="true"
     />
     <meta name="author" content="Julia Ernst" />
@@ -22,11 +22,11 @@
     />
     <meta
       property="og:description"
-      content="Julia Ernst - Geospatial Software Developer. Discover my webpage."
+      content="Julia Ernst - Geospatial Software Developer. Discover my new webpage, implemented with React, TypeScript and Github Actions."
     />
     <meta
       property="og:image"
-      content="https://missserious.github.io/jernst/img/HappyDuck.jpeg"
+      content="https://missserious.github.io/jernst/HappyDuck.jpeg"
     />
     <meta property="og:url" content="https://missserious.github.io/" />
     <meta property="og:type" content="website" />
