fix: or:url with subfolder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta
       name="description"
       content="Julia Ernst - Geospatial Software Developer. Discover my new webpage, implemented with React, TypeScript and Github Actions."
-      data-rh="true"
     />
     <meta name="author" content="Julia Ernst" />
     <meta name="date" content="2025-12-21" scheme="YYYY-MM-DD" />
@@ -28,7 +27,7 @@
       property="og:image"
       content="https://missserious.github.io/jernst/HappyDuck.jpeg"
     />
-    <meta property="og:url" content="https://missserious.github.io/" />
+    <meta property="og:url" content="https://missserious.github.io/jernst/" />
     <meta property="og:type" content="website" />
   </head>
   <body>
