change og:image - old image: 240px * 240px - should work on whatsapp with 300px * 200px or more...

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://missserious.github.io/jernst/HappyDuck.jpeg"
+      content="https://missserious.github.io/jernst/welcome.jpeg"
     />
     <meta property="og:url" content="https://missserious.github.io/jernst/" />
     <meta property="og:type" content="website" />
